<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Add a new rock to the screen -->
    <item 
        android:id="@+id/add"
        android:showAsAction="always" 
	    android:icon="@drawable/add"
        android:title="@string/menu_add"  />
    
    <!-- A button to move the map to current GPS location -->
    <item 
        android:id="@+id/gps"
        android:showAsAction="always"
	    android:icon="@drawable/gps_found"
	    android:title="@string/menu_gps" />
       
    <!-- Show a list of all the rocks (and how far away they are from you) -->
    <item 
        android:id="@+id/list"
        android:showAsAction="always" 
	    android:icon="@drawable/list"
        android:title="@string/menu_list"
        android:visible="false"  />
    
    <!-- Give a radiobox choice of what type of rocks to display on the screen -->
    <item
        android:id="@+id/show_hide"
        android:showAsAction="ifRoom"
        android:icon="@drawable/rock_select"
        android:title="@string/menu_not_picked">
        <menu>
            <!-- A group of the display options (All, Picked, Not-Picked) -->
            <group 
                android:checkableBehavior="single">
                <item
                    android:id="@+id/all_rocks"
                    android:icon="@drawable/rock_select_both"
                    android:title="@string/menu_all_rocks" />
                
			    <item 
			        android:id="@+id/not_picked_rocks"
				    android:icon="@drawable/rock_select_down"
			        android:title="@string/menu_not_picked"
			        android:checked="true" />
			    
			    <item 
			        android:id="@+id/picked_rocks"
				    android:icon="@drawable/rock_select_up"
			        android:title="@string/menu_picked" />
		    </group>
    	</menu>
	</item>
	
	<!-- Resync with remote servers -->
    <item 
        android:id="@+id/sync"
        android:showAsAction="ifRoom" 
	    android:icon="@drawable/refresh"
        android:title="@string/menu_sync"
        android:visible="true" />
    <item 
        android:id="@+id/auto_sync"
        android:showAsAction="never" 
	    android:icon="@drawable/refresh"
        android:title="Auto Sync"
        android:visible="true" />
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="100"
        android:title="Help"
        android:layout_gravity="bottom"/>
    <item
        android:id="@+id/menu_legal"
        android:orderInCategory="100"
        android:title="Legal"
        android:layout_gravity="bottom"/>

</menu>